--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.7",
+    "framer-motion": "^11.5.4",
     "i18next": "^23.14.0",
     "i18next-browser-languagedetector": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-i18next": "^15.0.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "sweetalert2": "^11.13.1"
   },
